Corrected for pictures V1

--- a/Photos.html
+++ b/Photos.html
@@ -49,7 +49,7 @@
   <div class="row">
       <div class="col-sm-4">
  		<div class="thumbnail">
-          		<img src="DSC_0233.jpg" alt="Lights" style="width:100%">
+          		<img src="./DSC_0233.jpg" alt="Lights" style="width:100%">
           			<div class="caption">
             			<p>The Taj, one of the seven wonders in the world, the momument of LOVE.
 					 It was built by the order of Mughal Emperor Shah Jahan between 1631 to 1648.
