--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <ul class="nav navbar-nav navbar-middle">
       <li class="active"><a href="index.html">Home</a></li>
       <li><a href="Research.html">Research</a></li>
-      <li><a href="academic.html">Academic</a></li>
+      <li><a href="Academic.html">Academic</a></li>
       <li><a href="Hobby.html">Hobby</a></li>
 	<li ><a href="Photos.html">Photos</a></li>
     </ul>
