Corrected for pictures V4

--- a/Photos.html
+++ b/Photos.html
@@ -49,7 +49,7 @@
   <div class="row">
       <div class="col-sm-4">
  		<div class="thumbnail">
-          		<img src="./DSC_0233.jpg" alt="Lights" style="width:100%">
+          		<img src="DSC0233.jpg" alt="Lights" style="width:100%">
           			<div class="caption">
             			<p>The Taj, one of the seven wonders in the world, the momument of LOVE.
 					 It was built by the order of Mughal Emperor Shah Jahan between 1631 to 1648.
@@ -61,7 +61,7 @@
 
 	<div class="col-sm-4">
  		<div class="thumbnail">
-          		<img src="DSC_0232.jpg" alt="Lights" style="width:100%">
+          		<img src="DSC0232.jpg" alt="Lights" style="width:100%">
           			<div class="caption">
             			<p>The Taj, one of the seven wonders in the world, the momument of LOVE.
 					 It was built by the order of Mughal Emperor Shah Jahan between 1631 to 1648.
@@ -73,7 +73,7 @@
 
 	<div class="col-sm-4">
  		<div class="thumbnail">
-          		<img src="DSC_0284.jpg" alt="Lights" style="width:100%">
+          		<img src="DSC0284.jpg" alt="Lights" style="width:100%">
           			<div class="caption">
             			<p>The sunlight passed through the spider nets, which were built on the braches of the tree,
  					created a snare of illusion.</p>
@@ -92,7 +92,7 @@
   <div class="row">
       <div class="col-sm-4">
  		<div class="thumbnail">
-          		<img src="DSC_0482.jpg" alt="Lights" style="width:100%">
+          		<img src="DSC0482.jpg" alt="Lights" style="width:100%">
           			<div class="caption">
             			<p> A baby monkey was playing with its mother inside the cage in a national park. 
 					In between the baby was watching the people who were freely roaming around though 
@@ -103,7 +103,7 @@
 
 	<div class="col-sm-4">
  		<div class="thumbnail">
-          		<img src="DSC_0404.jpg" alt="Lights" style="width:100%">
+          		<img src="DSC0404.jpg" alt="Lights" style="width:100%">
           			<div class="caption">
             			<p>A bird was stretching its wings for a fly. 
 					For it, the height it could fly was not limited by 
@@ -115,7 +115,7 @@
 
 	<div class="col-sm-4">
  		<div class="thumbnail">
-          		<img src="DSC_0657.jpg" alt="Lights" style="width:100%">
+          		<img src="DSC0657.jpg" alt="Lights" style="width:100%">
           			<div class="caption">
             			<p>The people came to Merina beach during the sunset. 
 					Different types of people could be found there. This was
