Corrected for pictures V5

--- a/Academic.html
+++ b/Academic.html
@@ -136,7 +136,7 @@
 <div class="container"  >
   <div class="row">
 	<div class="col-sm-12">
-    <img src="1.PNG" class="img-responsive" alt="Cinque Terre">
+    <img src="1.png" class="img-responsive" alt="Cinque Terre">
      </div>
 
   </div>
